test/e2e/conformance/tests/httproute-http2rpc-1-update.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.higress.io/v1
kind: Http2Rpc
metadata:
  name: httproute-http2rpc-demo
  namespace: higress-system
spec:
  dubbo: 
    service: com.dubbo.demo.api.DemoService
    version: 1.0.0
    group: dev
    methods: 
    - serviceMethod: sayHello
      headersAttach: "*"
      httpMethods: 
      - GET
      httpPath: "/dubbo/hello_update"
      params:
      - paramKey: name
        paramSource: QUERY
        paramType: "java.lang.String"
---
apiVersion: networking.higress.io/v1
kind: McpBridge
metadata:
  name: default
  namespace: higress-system
spec:
  registries:
  - domain: nacos-standlone-rc3-service.higress-conformance-app-backend
    nacosGroups:
    - DEFAULT_GROUP
    name: nacos-service-resource
    port: 8848
    type: nacos
---
apiVersion: networking.higress.io/v1
kind: Http2Rpc
metadata:
  name: httproute-http2rpc-healthservice
  namespace: higress-system
spec:
  dubbo: 
    service: com.dubbo.demo.api.HealthService
    version: 1.0.0
    group: dev
    methods: 
    - serviceMethod: readiness
      headersAttach: "*"
      httpMethods: 
      - GET
      httpPath: "/dubbo/health/readiness"
      params:
      - paramKey: type
        paramSource: QUERY
        paramType: "java.lang.String"
    - serviceMethod: liveness
      headersAttach: "*"
      httpMethods: 
      - GET
      httpPath: "/dubbo/health/liveness"
      params:
      - paramKey: type
        paramSource: QUERY
        paramType: "java.lang.String"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: providers:com.dubbo.demo.api.HealthService:1.0.0:dev.DEFAULT-GROUP.public.nacos
    higress.io/rpc-destination-name: httproute-http2rpc-healthservice
  name: httproute-http2rpc-healthservice-ingress
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
  - host: "foo.com"
    http:
      paths:
      - pathType: Prefix
        path: /dubbo/health
        backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
